FIPS-2507 :: fix new FindBugs Warning